--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,8 +4,8 @@ theme: "theme-academic-cv"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Héla Ouaili # Website name
-baseURL: '' # Website URL
+title: HELA OUAILY # Website name
+baseURL: 'https://helaouaili.netlify.app/' # Website URL
 
 ############################
 ## LANGUAGE
