--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -45,7 +45,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Héla Ouaili'
+    notice: '© {year} HELA OUAILY'
     license:
       enable: true
       allow_derivatives: false
